# NP-01_librespot

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
audio/: Cargo.toml
audio/src/: decrypt.rs  fetch.rs  lewton_decoder.rs  lib.rs
connect/: Cargo.toml
connect/src/: context.rs  discovery.rs  lib.rs  spirc.rs
core/: Cargo.toml  build.rs
core/src/: apresolve.rs  authentication.rs  config.rs  events.rs  keymaster.rs  lib.rs  proxytunnel.rs  session.rs  spotify_id.rs
core/src/connection/: handshake.rs  mod.rs
core/src/mercury/: mod.rs
core/src/util/: mod.rs
examples/: play.rs
metadata/: Cargo.toml
metadata/src/: lib.rs
playback/: Cargo.toml
playback/src/: config.rs  lib.rs  player.rs
playback/src/audio_backend/: alsa.rs  mod.rs
playback/src/mixer/: alsamixer.rs  mod.rs
protocol/: Cargo.toml  files.rs
protocol/src/: authentication.rs  keyexchange.rs  mercury.rs  metadata.rs  pubsub.rs  spirc.rs
src/: lib.rs  main.rs  player_event_handler.rs
