[package]
name = "librespot-audio"
version = "0.1.0"
authors = ["Paul Lietar <paul@lietar.net>"]

[dependencies]
bit-set = "0.5.1"
byteorder = "1.3.1"
futures = "0.1.26"
lewton = "0.9.4"
log = "0.4.6"
num-bigint = "0.2.2"
num-traits = "0.2.6"
tempfile = "3.0.7"
aes-ctr = "0.3.0"

tremor = { git = "https://github.com/plietar/rust-tremor", optional = true }
vorbis = { version = "0.1.0", optional = true }

[dependencies.librespot-core]
path = "../core"

[features]
with-tremor = ["tremor"]
with-vorbis = ["vorbis"]
