[package]
name = "librespot-audio"
version = "0.1.0"
authors = ["Paul Lietar <paul@lietar.net>"]

[dependencies]
bit-set = "0.5.1"
byteorder = "1.3.2"
bytes = "0.4"
futures = "0.1.28"
lewton = "0.10.1"
log = "0.4.6"
num-bigint = "0.2.2"
num-traits = "0.2.8"
tempfile = "3.1.0"
aes-ctr = "0.3.0"

tremor = { git = "https://github.com/plietar/rust-tremor", optional = true }
vorbis = { version = "0.1.0", optional = true }

[dependencies.librespot-core]
path = "../core"

[features]
with-tremor = ["tremor"]
with-vorbis = ["vorbis"]
