[package]
name = "librespot-connect"
version = "0.1.0"
authors = ["Paul Lietar <paul@lietar.net>"]

[dependencies]
base64 = "0.10.1"
futures = "0.1.28"
hyper = "0.12.35"
log = "0.4.6"
num-bigint = "0.2.2"
protobuf = "~2.8.1"
rand = "0.7.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
tokio-core = "0.1.17"
url = "1.7.2"
sha-1 = "0.8.1"
hmac = "0.7.0"
aes-ctr = "0.3.0"
block-modes = "0.3.3"

dns-sd = { version = "0.1.3", optional = true }
mdns = { git = "https://github.com/plietar/rust-mdns", optional = true }

[dependencies.librespot-core]
path = "../core"
[dependencies.librespot-playback]
path = "../playback"
[dependencies.librespot-protocol]
path = "../protocol"

[features]
default = ["mdns"]
with-dns-sd = ["dns-sd"]
