[package]
name = "librespot-core"
version = "0.1.0"
authors = ["Paul Lietar <paul@lietar.net>"]
build = "build.rs"

[dependencies]
base64 = "0.10.1"
byteorder = "1.3.2"
bytes = "0.4.12"
error-chain = { version = "0.12.1", default_features = false }
futures = "0.1.28"
httparse = "1.3.4"
hyper = "0.12.35"
hyper-proxy = { version = "0.5.0", default_features = false }
lazy_static = "1.3.0"
log = "0.4.6"
num-bigint = "0.2.2"
num-integer = "0.1.41"
num-traits = "0.2.8"
protobuf = "~2.8.1"
rand = "0.7.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
shannon = "0.2.0"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1.12"
url = "2.1.0"
uuid = { version = "0.7.4", features = ["v4"] }
sha-1 = "0.8.1"
hmac = "0.7.0"
pbkdf2 = "0.3.0"
aes = "0.3.2"

[dependencies.librespot-protocol]
path = "../protocol"

[build-dependencies]
rand = "0.7.0"
vergen = "3.0.4"
