[package]
name = "librespot-playback"
version = "0.1.0"
authors = ["Sasha Hilton <sashahilton00@gmail.com>"]

[dependencies]
futures = "0.1.26"
log = "0.4.6"
byteorder = "1.3.1"

alsa            = { git = "https://github.com/diwic/alsa-rs.git", optional = true }
portaudio-rs    = { version = "0.3.0", optional = true }
libpulse-sys    = { version = "1.5.0", optional = true }
jack            = { version = "0.6.0", optional = true }
libc            = { version = "0.2.54", optional = true }

[dependencies.librespot-audio]
path = "../audio"
[dependencies.librespot-core]
path = "../core"
[dependencies.librespot-metadata]
path = "../metadata"

[features]
alsa-backend = ["alsa"]
portaudio-backend = ["portaudio-rs"]
pulseaudio-backend = ["libpulse-sys", "libc"]
jackaudio-backend = ["jack"]
