[package]
name = "librespot-playback"
version = "0.1.1"
authors = ["Sasha Hilton <sashahilton00@gmail.com>"]
description="The audio playback logic for librespot"
license="MIT"
edition = "2018"

[dependencies.librespot-audio]
path = "../audio"
version = "0.1.1"
[dependencies.librespot-core]
path = "../core"
version = "0.1.1"
[dependencies.librespot-metadata]
path = "../metadata"
version = "0.1.1"

[dependencies]
futures = "0.1"
log = "0.4"
byteorder = "1.3"

alsa            = { git = "https://github.com/diwic/alsa-rs.git", optional = true }
portaudio-rs    = { version = "0.3.1", optional = true }
libpulse-sys    = { version = "1.5.0", optional = true }
jack            = { version = "0.6.0", optional = true }
libc            = { version = "0.2.59", optional = true }

[features]
alsa-backend = ["alsa"]
portaudio-backend = ["portaudio-rs"]
pulseaudio-backend = ["libpulse-sys", "libc"]
jackaudio-backend = ["jack"]
